grab shirahama surf forecast

--- a/index.ipynb
+++ b/index.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from surfbreak.load_videos import test_hello"
+    "from surfbreak.load_videos import get_surfdata, surf_spots"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "`pip install surfbreak`"
    ]
   },
   {
@@ -80,16 +80,64 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello!\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'hello!'"
+       "{'associated': {'units': {'temperature': 'C',\n",
+       "   'tideHeight': 'M',\n",
+       "   'waveHeight': 'M',\n",
+       "   'windSpeed': 'KPH'},\n",
+       "  'utcOffset': 9,\n",
+       "  'location': {'lon': 138.973403, 'lat': 34.687813},\n",
+       "  'forecastLocation': {'lon': 138.982, 'lat': 34.689},\n",
+       "  'offshoreLocation': {'lon': 139, 'lat': 34},\n",
+       "  'spotId': '584204204e65fad6a77098c4',\n",
+       "  'tideLocation': {'name': 'Simoda, Sizuoka, Japan',\n",
+       "   'min': -0.09,\n",
+       "   'max': 1.75,\n",
+       "   'lon': 138.95,\n",
+       "   'lat': 34.6667,\n",
+       "   'mean': 1.01}},\n",
+       " 'data': {'wave': [{'timestamp': 1589554800,\n",
+       "    'surf': {'min': 0.18, 'max': 0.47, 'optimalScore': 2},\n",
+       "    'swells': [{'height': 0.09,\n",
+       "      'period': 4,\n",
+       "      'direction': 244.69,\n",
+       "      'directionMin': 238.36,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0,\n",
+       "      'period': 0,\n",
+       "      'direction': 0,\n",
+       "      'directionMin': 0,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.61,\n",
+       "      'period': 9,\n",
+       "      'direction': 105.47,\n",
+       "      'directionMin': 98.44,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.06,\n",
+       "      'period': 9,\n",
+       "      'direction': 43.59,\n",
+       "      'directionMin': 40.78,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0,\n",
+       "      'period': 0,\n",
+       "      'direction': 0,\n",
+       "      'directionMin': 0,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0,\n",
+       "      'period': 0,\n",
+       "      'direction': 0,\n",
+       "      'directionMin': 0,\n",
+       "      'optimalScore': 0}]}],\n",
+       "  'wind': [{'timestamp': 1589554800,\n",
+       "    'speed': 4.39,\n",
+       "    'direction': 236.7,\n",
+       "    'gust': 6.04,\n",
+       "    'optimalScore': 2}],\n",
+       "  'tides': [{'timestamp': 1589554800, 'type': 'NORMAL', 'height': 1.32}],\n",
+       "  'weather': [{'timestamp': 1589554800,\n",
+       "    'temperature': 17.7,\n",
+       "    'condition': 'NIGHT_OVERCAST_NO_RAIN'}]}}"
       ]
      },
      "execution_count": null,
@@ -98,7 +146,7 @@
     }
    ],
    "source": [
-    "test_hello()"
+    "get_surfdata(surf_spots['shirahama'][\"spotid\"], forecast=False)"
    ]
   }
  ],
