--- a/00_load_videos.ipynb
+++ b/00_load_videos.ipynb
@@ -387,7 +387,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "surf_spots = {\"shirahama\": {\"cam_url\": \"https://www.youtube.com/watch?v=WbRbWJZ7ZH0\",\n",
+    "surf_spots = {\"shirahama\": {\"cam_url\": \"https://www.youtube.com/watch?v=E6x_nn7k-Lc\",\n",
     "                            \"spotid\": \"584204204e65fad6a77098c4\"}\n",
     "             }"
    ]
@@ -426,8 +426,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[youtube] WbRbWJZ7ZH0: Downloading webpage\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: WbRbWJZ7ZH0: YouTube said: This live stream recording is not available.\n",
+      "Sorry about that.\n"
+     ]
+    }
+   ],
    "source": [
     "# \"Shirahama Ohama Beach\" 白浜大浜海水浴場（静岡県下田市）\n",
     "!youtube-dl -f \"bestvideo[height<=?1080]+bestaudio/best\" -o \"tmp.mp4\" https://www.youtube.com/watch?v=WbRbWJZ7ZH0"
@@ -440,6 +458,428 @@
     "# 新舞子海水浴場 福ヶ浜 ライブ配信\n",
     "!youtube-dl -f \"bestvideo[height<=?1080]+bestaudio/best\" -o \"tmp.mp4\" https://www.youtube.com/watch?v=3dkBkAjNay4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'associated': {'units': {'temperature': 'C',\n",
+       "   'tideHeight': 'M',\n",
+       "   'waveHeight': 'M',\n",
+       "   'windSpeed': 'KPH'},\n",
+       "  'utcOffset': 9,\n",
+       "  'location': {'lon': 138.973403, 'lat': 34.687813},\n",
+       "  'forecastLocation': {'lon': 138.982, 'lat': 34.689},\n",
+       "  'offshoreLocation': {'lon': 139, 'lat': 34},\n",
+       "  'spotId': '584204204e65fad6a77098c4',\n",
+       "  'tideLocation': {'name': 'Simoda, Sizuoka, Japan',\n",
+       "   'min': -0.09,\n",
+       "   'max': 1.75,\n",
+       "   'lon': 138.95,\n",
+       "   'lat': 34.6667,\n",
+       "   'mean': 1.01}},\n",
+       " 'data': {'wave': [{'timestamp': 1589641200,\n",
+       "    'surf': {'min': 0.2, 'max': 0.5, 'optimalScore': 2},\n",
+       "    'swells': [{'height': 2.32,\n",
+       "      'period': 6,\n",
+       "      'direction': 203.91,\n",
+       "      'directionMin': 187.73,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0,\n",
+       "      'period': 0,\n",
+       "      'direction': 0,\n",
+       "      'directionMin': 0,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.37,\n",
+       "      'period': 9,\n",
+       "      'direction': 98.44,\n",
+       "      'directionMin': 94.22,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0,\n",
+       "      'period': 0,\n",
+       "      'direction': 0,\n",
+       "      'directionMin': 0,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.09,\n",
+       "      'period': 11,\n",
+       "      'direction': 43.59,\n",
+       "      'directionMin': 41.48,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0,\n",
+       "      'period': 0,\n",
+       "      'direction': 0,\n",
+       "      'directionMin': 0,\n",
+       "      'optimalScore': 0}]},\n",
+       "   {'timestamp': 1589662800,\n",
+       "    'surf': {'min': 0.08, 'max': 0.38, 'optimalScore': 2},\n",
+       "    'swells': [{'height': 2.35,\n",
+       "      'period': 8,\n",
+       "      'direction': 219.38,\n",
+       "      'directionMin': 203.91,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0,\n",
+       "      'period': 0,\n",
+       "      'direction': 0,\n",
+       "      'directionMin': 0,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.27,\n",
+       "      'period': 9,\n",
+       "      'direction': 101.25,\n",
+       "      'directionMin': 97.03,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.09,\n",
+       "      'period': 14,\n",
+       "      'direction': 209.53,\n",
+       "      'directionMin': 206.02,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.12,\n",
+       "      'period': 11,\n",
+       "      'direction': 43.59,\n",
+       "      'directionMin': 40.78,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0,\n",
+       "      'period': 0,\n",
+       "      'direction': 0,\n",
+       "      'directionMin': 0,\n",
+       "      'optimalScore': 0}]},\n",
+       "   {'timestamp': 1589684400,\n",
+       "    'surf': {'min': 0, 'max': 0.28, 'optimalScore': 2},\n",
+       "    'swells': [{'height': 1.98,\n",
+       "      'period': 8,\n",
+       "      'direction': 225,\n",
+       "      'directionMin': 210.94,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.49,\n",
+       "      'period': 5,\n",
+       "      'direction': 264.38,\n",
+       "      'directionMin': 253.83,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.24,\n",
+       "      'period': 9,\n",
+       "      'direction': 104.06,\n",
+       "      'directionMin': 98.44,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.18,\n",
+       "      'period': 14,\n",
+       "      'direction': 209.53,\n",
+       "      'directionMin': 206.02,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0,\n",
+       "      'period': 0,\n",
+       "      'direction': 0,\n",
+       "      'directionMin': 0,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0,\n",
+       "      'period': 0,\n",
+       "      'direction': 0,\n",
+       "      'directionMin': 0,\n",
+       "      'optimalScore': 0}]},\n",
+       "   {'timestamp': 1589706000,\n",
+       "    'surf': {'min': 0, 'max': 0.24, 'optimalScore': 2},\n",
+       "    'swells': [{'height': 1.52,\n",
+       "      'period': 8,\n",
+       "      'direction': 223.59,\n",
+       "      'directionMin': 212.34,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.85,\n",
+       "      'period': 5,\n",
+       "      'direction': 261.56,\n",
+       "      'directionMin': 251.72,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.21,\n",
+       "      'period': 9,\n",
+       "      'direction': 105.47,\n",
+       "      'directionMin': 99.14,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0.18,\n",
+       "      'period': 12,\n",
+       "      'direction': 209.53,\n",
+       "      'directionMin': 205.31,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0,\n",
+       "      'period': 0,\n",
+       "      'direction': 0,\n",
+       "      'directionMin': 0,\n",
+       "      'optimalScore': 0},\n",
+       "     {'height': 0,\n",
+       "      'period': 0,\n",
+       "      'direction': 0,\n",
+       "      'directionMin': 0,\n",
+       "      'optimalScore': 0}]}],\n",
+       "  'wind': [{'timestamp': 1589641200,\n",
+       "    'speed': 7.51,\n",
+       "    'direction': 346.7,\n",
+       "    'gust': 10.33,\n",
+       "    'optimalScore': 2},\n",
+       "   {'timestamp': 1589648400,\n",
+       "    'speed': 6.06,\n",
+       "    'direction': 272.84,\n",
+       "    'gust': 8.33,\n",
+       "    'optimalScore': 2},\n",
+       "   {'timestamp': 1589655600,\n",
+       "    'speed': 7.84,\n",
+       "    'direction': 246.65,\n",
+       "    'gust': 10.78,\n",
+       "    'optimalScore': 2},\n",
+       "   {'timestamp': 1589662800,\n",
+       "    'speed': 5.95,\n",
+       "    'direction': 240.64,\n",
+       "    'gust': 8.18,\n",
+       "    'optimalScore': 2},\n",
+       "   {'timestamp': 1589670000,\n",
+       "    'speed': 5.94,\n",
+       "    'direction': 201.33,\n",
+       "    'gust': 8.17,\n",
+       "    'optimalScore': 2},\n",
+       "   {'timestamp': 1589677200,\n",
+       "    'speed': 7.31,\n",
+       "    'direction': 208.96,\n",
+       "    'gust': 10.05,\n",
+       "    'optimalScore': 2},\n",
+       "   {'timestamp': 1589684400,\n",
+       "    'speed': 10.83,\n",
+       "    'direction': 239.43,\n",
+       "    'gust': 14.89,\n",
+       "    'optimalScore': 0},\n",
+       "   {'timestamp': 1589691600,\n",
+       "    'speed': 9.41,\n",
+       "    'direction': 241.77,\n",
+       "    'gust': 12.94,\n",
+       "    'optimalScore': 2},\n",
+       "   {'timestamp': 1589698800,\n",
+       "    'speed': 8.1,\n",
+       "    'direction': 246.97,\n",
+       "    'gust': 11.14,\n",
+       "    'optimalScore': 2},\n",
+       "   {'timestamp': 1589706000,\n",
+       "    'speed': 7,\n",
+       "    'direction': 256.32,\n",
+       "    'gust': 9.63,\n",
+       "    'optimalScore': 2},\n",
+       "   {'timestamp': 1589713200,\n",
+       "    'speed': 7.6,\n",
+       "    'direction': 268.19,\n",
+       "    'gust': 10.45,\n",
+       "    'optimalScore': 2},\n",
+       "   {'timestamp': 1589720400,\n",
+       "    'speed': 6.2,\n",
+       "    'direction': 278.24,\n",
+       "    'gust': 8.53,\n",
+       "    'optimalScore': 2}],\n",
+       "  'tides': [{'timestamp': 1589641200, 'type': 'NORMAL', 'height': 1.27},\n",
+       "   {'timestamp': 1589644800, 'type': 'NORMAL', 'height': 1.36},\n",
+       "   {'timestamp': 1589647440, 'type': 'HIGH', 'height': 1.39},\n",
+       "   {'timestamp': 1589648400, 'type': 'NORMAL', 'height': 1.38},\n",
+       "   {'timestamp': 1589652000, 'type': 'NORMAL', 'height': 1.33},\n",
+       "   {'timestamp': 1589655600, 'type': 'NORMAL', 'height': 1.21},\n",
+       "   {'timestamp': 1589659200, 'type': 'NORMAL', 'height': 1.07},\n",
+       "   {'timestamp': 1589662800, 'type': 'NORMAL', 'height': 0.93},\n",
+       "   {'timestamp': 1589666400, 'type': 'NORMAL', 'height': 0.83},\n",
+       "   {'timestamp': 1589670000, 'type': 'NORMAL', 'height': 0.78},\n",
+       "   {'timestamp': 1589670780, 'type': 'LOW', 'height': 0.78},\n",
+       "   {'timestamp': 1589673600, 'type': 'NORMAL', 'height': 0.8},\n",
+       "   {'timestamp': 1589677200, 'type': 'NORMAL', 'height': 0.87},\n",
+       "   {'timestamp': 1589680800, 'type': 'NORMAL', 'height': 0.96},\n",
+       "   {'timestamp': 1589684400, 'type': 'NORMAL', 'height': 1.06},\n",
+       "   {'timestamp': 1589688000, 'type': 'NORMAL', 'height': 1.11},\n",
+       "   {'timestamp': 1589689740, 'type': 'HIGH', 'height': 1.12},\n",
+       "   {'timestamp': 1589691600, 'type': 'NORMAL', 'height': 1.11},\n",
+       "   {'timestamp': 1589695200, 'type': 'NORMAL', 'height': 1.05},\n",
+       "   {'timestamp': 1589698800, 'type': 'NORMAL', 'height': 0.93},\n",
+       "   {'timestamp': 1589702400, 'type': 'NORMAL', 'height': 0.79},\n",
+       "   {'timestamp': 1589706000, 'type': 'NORMAL', 'height': 0.66},\n",
+       "   {'timestamp': 1589709600, 'type': 'NORMAL', 'height': 0.58},\n",
+       "   {'timestamp': 1589711820, 'type': 'LOW', 'height': 0.57},\n",
+       "   {'timestamp': 1589713200, 'type': 'NORMAL', 'height': 0.57},\n",
+       "   {'timestamp': 1589716800, 'type': 'NORMAL', 'height': 0.65},\n",
+       "   {'timestamp': 1589720400, 'type': 'NORMAL', 'height': 0.79},\n",
+       "   {'timestamp': 1589724000, 'type': 'NORMAL', 'height': 0.98},\n",
+       "   {'timestamp': 1589727600, 'type': 'NORMAL', 'height': 1.18}],\n",
+       "  'weather': [{'timestamp': 1589641200,\n",
+       "    'temperature': 17.4,\n",
+       "    'condition': 'NIGHT_OVERCAST_NO_RAIN'},\n",
+       "   {'timestamp': 1589648400,\n",
+       "    'temperature': 17.1,\n",
+       "    'condition': 'NIGHT_OVERCAST_NO_RAIN'},\n",
+       "   {'timestamp': 1589655600,\n",
+       "    'temperature': 17.1,\n",
+       "    'condition': 'NIGHT_OVERCAST_NO_RAIN'},\n",
+       "   {'timestamp': 1589662800,\n",
+       "    'temperature': 17.5,\n",
+       "    'condition': 'MOSTLY_CLOUDY_NO_RAIN'},\n",
+       "   {'timestamp': 1589670000,\n",
+       "    'temperature': 18.7,\n",
+       "    'condition': 'OVERCAST_NO_RAIN'},\n",
+       "   {'timestamp': 1589677200,\n",
+       "    'temperature': 20.1,\n",
+       "    'condition': 'OVERCAST_NO_RAIN'},\n",
+       "   {'timestamp': 1589684400,\n",
+       "    'temperature': 22.3,\n",
+       "    'condition': 'PARTLY_CLOUDY_NO_RAIN'},\n",
+       "   {'timestamp': 1589691600,\n",
+       "    'temperature': 23,\n",
+       "    'condition': 'MOSTLY_CLOUDY_NO_RAIN'},\n",
+       "   {'timestamp': 1589698800,\n",
+       "    'temperature': 22.3,\n",
+       "    'condition': 'OVERCAST_NO_RAIN'},\n",
+       "   {'timestamp': 1589706000,\n",
+       "    'temperature': 20.6,\n",
+       "    'condition': 'OVERCAST_NO_RAIN'},\n",
+       "   {'timestamp': 1589713200,\n",
+       "    'temperature': 19.1,\n",
+       "    'condition': 'NIGHT_OVERCAST_NO_RAIN'},\n",
+       "   {'timestamp': 1589720400,\n",
+       "    'temperature': 18.9,\n",
+       "    'condition': 'NIGHT_OVERCAST_NO_RAIN'}]}}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surf_data = get_surfdata(\"584204204e65fad6a77098c4\")\n",
+    "surf_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10232\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-84f42a922978>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msignal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "#proc = subprocess.Popen('youtube-dl -f \"bestvideo[height<=?1080]+bestaudio/best\" -o \"tmp.mp4\" https://www.youtube.com/watch?v=3dkBkAjNay4', \n",
+    "#                        shell=True)\n",
+    "\n",
+    "proc = subprocess.Popen('youtube-dl -f \"bestvideo[height<=?1080]+bestaudio/best\" -o \"tmp.mp4\" https://www.youtube.com/watch?v=E6x_nn7k-Lc', \n",
+    "                        shell=True)\n",
+    "print(proc.pid)\n",
+    "    \n",
+    "import time\n",
+    "time.sleep(1*60)\n",
+    "\n",
+    "import os, signal\n",
+    "os.kill(proc.pid, signal.CTRL_BREAK_EVENT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "proc.returncode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First key user-facing function will save wave forecast data to a file, and begin download of a surfcam stream for the same location.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive C has no label.\n",
+      " Volume Serial Number is E473-89B5\n",
+      "\n",
+      " Directory of C:\\Users\\Erik\\work\\surfbreak\n",
+      "\n",
+      "05/17/2020  03:32 PM    <DIR>          .\n",
+      "05/17/2020  03:32 PM    <DIR>          ..\n",
+      "05/16/2020  10:02 PM                52 .gitattributes\n",
+      "05/16/2020  10:02 PM               510 .gitconfig\n",
+      "05/16/2020  08:18 PM    <DIR>          .github\n",
+      "05/16/2020  08:18 PM             1,681 .gitignore\n",
+      "05/16/2020  10:03 PM    <DIR>          .ipynb_checkpoints\n",
+      "05/17/2020  03:32 PM            18,442 00_load_videos.ipynb\n",
+      "05/16/2020  08:18 PM             2,381 CONTRIBUTING.md\n",
+      "05/16/2020  08:18 PM    <DIR>          docs\n",
+      "05/16/2020  10:05 PM             4,269 index.ipynb\n",
+      "05/16/2020  08:18 PM            11,558 LICENSE\n",
+      "05/16/2020  08:18 PM               116 MANIFEST.in\n",
+      "05/16/2020  08:18 PM                83 README.md\n",
+      "05/16/2020  10:06 PM             2,433 settings.ini\n",
+      "05/16/2020  08:18 PM             2,118 setup.py\n",
+      "05/16/2020  08:24 PM    <DIR>          surfbreak\n",
+      "05/17/2020  03:32 PM           763,670 tmp.mp4.part\n",
+      "              12 File(s)        807,313 bytes\n",
+      "               6 Dir(s)  398,905,880,576 bytes free\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11324"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "proc.pid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
