--- a/index.ipynb
+++ b/index.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from surfbreak.load_videos import get_surfdata, surf_spots"
+    "from surfbreak.load_videos import get_surfdata, SURF_SPOTS"
    ]
   },
   {
@@ -76,77 +76,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'associated': {'units': {'temperature': 'C',\n",
-       "   'tideHeight': 'M',\n",
-       "   'waveHeight': 'M',\n",
-       "   'windSpeed': 'KPH'},\n",
-       "  'utcOffset': 9,\n",
-       "  'location': {'lon': 138.973403, 'lat': 34.687813},\n",
-       "  'forecastLocation': {'lon': 138.982, 'lat': 34.689},\n",
-       "  'offshoreLocation': {'lon': 139, 'lat': 34},\n",
-       "  'spotId': '584204204e65fad6a77098c4',\n",
-       "  'tideLocation': {'name': 'Simoda, Sizuoka, Japan',\n",
-       "   'min': -0.09,\n",
-       "   'max': 1.75,\n",
-       "   'lon': 138.95,\n",
-       "   'lat': 34.6667,\n",
-       "   'mean': 1.01}},\n",
-       " 'data': {'wave': [{'timestamp': 1589554800,\n",
-       "    'surf': {'min': 0.18, 'max': 0.47, 'optimalScore': 2},\n",
-       "    'swells': [{'height': 0.09,\n",
-       "      'period': 4,\n",
-       "      'direction': 244.69,\n",
-       "      'directionMin': 238.36,\n",
-       "      'optimalScore': 0},\n",
-       "     {'height': 0,\n",
-       "      'period': 0,\n",
-       "      'direction': 0,\n",
-       "      'directionMin': 0,\n",
-       "      'optimalScore': 0},\n",
-       "     {'height': 0.61,\n",
-       "      'period': 9,\n",
-       "      'direction': 105.47,\n",
-       "      'directionMin': 98.44,\n",
-       "      'optimalScore': 0},\n",
-       "     {'height': 0.06,\n",
-       "      'period': 9,\n",
-       "      'direction': 43.59,\n",
-       "      'directionMin': 40.78,\n",
-       "      'optimalScore': 0},\n",
-       "     {'height': 0,\n",
-       "      'period': 0,\n",
-       "      'direction': 0,\n",
-       "      'directionMin': 0,\n",
-       "      'optimalScore': 0},\n",
-       "     {'height': 0,\n",
-       "      'period': 0,\n",
-       "      'direction': 0,\n",
-       "      'directionMin': 0,\n",
-       "      'optimalScore': 0}]}],\n",
-       "  'wind': [{'timestamp': 1589554800,\n",
-       "    'speed': 4.39,\n",
-       "    'direction': 236.7,\n",
-       "    'gust': 6.04,\n",
-       "    'optimalScore': 2}],\n",
-       "  'tides': [{'timestamp': 1589554800, 'type': 'NORMAL', 'height': 1.32}],\n",
-       "  'weather': [{'timestamp': 1589554800,\n",
-       "    'temperature': 17.7,\n",
-       "    'condition': 'NIGHT_OVERCAST_NO_RAIN'}]}}"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'get_surfdata' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a199cbd03652>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_surfdata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSURF_SPOTS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'shirahama'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"spotid\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_surfdata' is not defined"
+     ]
     }
    ],
    "source": [
-    "get_surfdata(surf_spots['shirahama'][\"spotid\"], forecast=False)"
+    "get_surfdata(SURF_SPOTS['shirahama'][\"spotid\"])"
    ]
   }
  ],
@@ -155,6 +101,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
