--- a/01_wave_modeling.ipynb
+++ b/01_wave_modeling.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#default_exp wave_modeling"
+   ]
   },
   {
    "attachments": {
@@ -39,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This sort of complex refraction is also going on, as a function of incoming wave direction and bathometry:\n",
+    "## The following sort of complex refraction is also going on, as a function of incoming wave direction and bathometry:\n",
     "\n",
     "(from http://pordlabs.ucsd.edu/rsalmon/111.textbook.pdf)\n",
     "\n",
@@ -52,6 +54,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
