Clean detection working, ready to do perspective transform

--- a/00_load_videos.ipynb
+++ b/00_load_videos.ipynb
@@ -784,6 +784,16 @@
     "#export\n",
     "import cv2\n",
     "\n",
+    "def video_length_s(stream_filepath):\n",
+    "    cap = cv2.VideoCapture(stream_filepath)\n",
+    "    video_fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    frame_count = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "    if frame_count < 1:\n",
+    "        print(\"No frames in the video file\")\n",
+    "        return None\n",
+    "    file_duration_s = frame_count/video_fps\n",
+    "    return file_duration_s\n",
+    "\n",
     "def decode_frame_sequence(stream_filepath, duration_s=10, start_s=0, RGB=False, one_image_per_n_frames=2):\n",
     "    cap = cv2.VideoCapture(stream_filepath)\n",
     "    video_fps = cap.get(cv2.CAP_PROP_FPS)\n",
@@ -793,8 +803,8 @@
     "        return None\n",
     "    file_duration_s = frame_count/video_fps\n",
     "    wait_ms = int(1000/video_fps)\n",
-    "    print(f'Decoding {stream_filepath}  Duration: {file_duration_s/60:0.1f}m ({(file_duration_s):0.2f}s)  FPS: {video_fps}')\n",
-    "    print(f'(outputting one image for every {one_image_per_n_frames} video frames)')\n",
+    "    print(f'Decoding {stream_filepath}  Duration: {file_duration_s/60:0.1f}m ({(file_duration_s):0.2f}s)  FPS: {video_fps}'\n",
+    "          f'  Emitting 1/{one_image_per_n_frames} of frames ')\n",
     "    n_frames = duration_s*int(video_fps)\n",
     "    start_frame_index = int(start_s*int(video_fps))\n",
     "    cap.set(cv2.CAP_PROP_POS_FRAMES, start_frame_index);\n",
@@ -906,7 +916,8 @@
      "text": [
       "Converted 00_load_videos.ipynb.\n",
       "Converted 01_wave_modeling.ipynb.\n",
-      "Converted 03_wave_detection.ipynb.\n",
+      "Converted 02_wave_detection.ipynb.\n",
+      "Converted 03_perspective_transform.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
