surfzone line-fit done

--- a/02_wave_detection.ipynb
+++ b/02_wave_detection.ipynb
@@ -199,7 +199,7 @@
     "import cv2\n",
     "\n",
     "def dense_optical_flow(image_cube, start_idx=0, n_flows=None, step_size=1):\n",
-    "    \"\"\"xy flow:  X is down, Y is to right in image space\n",
+    "    \"\"\"xy flow:  Y is down, X is to right in image space\n",
     "       hsv flow: hue/saturation encode direction, value (magnitude) is in index 2\"\"\"\n",
     "    if n_flows is None:\n",
     "        n_flows = (image_cube.shape[-1] // step_size) - 1\n",
