cached video-to-regularized-image-tensor pipeline working

--- a/04_graph_utilities.ipynb
+++ b/04_graph_utilities.ipynb
@@ -108,10 +108,25 @@
     "            args_repr.append(\"Series\")\n",
     "        else:\n",
     "            args_repr.append(arg)\n",
-    "            \n",
-    "    func_string_with_signature = pprint.pformat(func.__name__  + str(inspect.signature(func)), indent=4)[1:-1]\n",
+    "     \n",
+    "    # Ugly....  build up a string that replicates a normal python function call signature, \n",
+    "    # dealing with all of graphviz's wonkyness (like \\l for left-justified newlines...)\n",
+    "    func_signature_segments = str(inspect.signature(func)).__repr__()[1:-1].split(', ')\n",
+    "    func_signature_string = \"\"\n",
+    "    cumulative_funcsig_len = len(func.__name__) + 1\n",
+    "    for segment in func_signature_segments:\n",
+    "        cumulative_funcsig_len += len(segment)\n",
+    "        if cumulative_funcsig_len > 50:\n",
+    "            cumulative_funcsig_len = 0\n",
+    "            if segment[-1] == \")\":\n",
+    "                func_signature_string += segment + \"   \"\n",
+    "            else:\n",
+    "                func_signature_string += segment + \",\\l\" + 8*\" \"\n",
+    "        else:\n",
+    "            func_signature_string += segment + \",  \" \n",
+    "\n",
+    "    func_string_with_signature = func.__name__  + func_signature_string[:-3]\n",
     "    args_string = pprint.pformat(tuple(args_repr), indent=4)\n",
-    "    \n",
     "    # In raw graphviz labels, '\\l' indicates a newline with the previous-line left-justified (\\n is centered)\n",
     "    return func_string_with_signature + \"\\l\" + args_string\n",
     "    \n",
