adapting to wider windows in-progress (training somewhat unstable)

--- a/09_training_utilities.ipynb
+++ b/09_training_utilities.ipynb
@@ -8,11 +8,11 @@
     "\n",
     "\n",
     "TODO:\n",
+    "1. Improve dataset classes to load batches faster to remove the CPU bottleneck in training\n",
+    "1. Slowly increase the number of time chunks included in training each epoch (instead of all mixed in at once)\n",
     "1. Develop method for measuring wave propogation speed in image coordinates,  then find the flattened homography that makes this as constant as possible.\n",
-    "1. Train again with wave equation now that wavespeed is more uniform\n",
-    "1. Infer an accumulated wave speed field (squared slowness field) in the flattened coordinates for wavefunction normalization with non-uniform propogation speed. \n",
+    "1. Train on much wider images now that wavespeed is more uniform\n",
     "1. Create a pipeline that generates animations for each stage of the training process (normalization, clipping, learning), and compiles into a demo video.\n",
-    "1. Set up the batch dimension to be one chunk per batch.  Batchsize = n_chunks\n",
     "1. Get tensorboard metrics logging working with this logger class: https://github.com/PyTorchLightning/pytorch-lightning/issues/1228#issuecomment-622963564\n"
    ]
   },
