--- a/nbs/experiments/hyperparameter_optimization.ipynb
+++ b/nbs/experiments/hyperparameter_optimization.ipynb
@@ -6,12 +6,8 @@
    "source": [
     "### Next steps:\n",
     "\n",
-    "\n",
     "TODO:\n",
-    "1. Improve dataset classes to load batches faster to remove the CPU bottleneck in training\n",
-    "1. Slowly increase the number of time chunks included in training each epoch (instead of all mixed in at once)\n",
     "1. Develop method for measuring wave propogation speed in image coordinates,  then find the flattened homography that makes this as constant as possible.\n",
-    "1. Train on much wider images now that wavespeed is more uniform\n",
     "1. Create a pipeline that generates animations for each stage of the training process (normalization, clipping, learning), and compiles into a demo video.\n",
     "1. Get tensorboard metrics logging working with this logger class: https://github.com/PyTorchLightning/pytorch-lightning/issues/1228#issuecomment-622963564\n"
    ]
@@ -21,6 +17,16 @@
    "metadata": {},
    "source": [
     "#### First get the basic Tensorflow Lightning training loop working"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('/home/erik/work/surfbreak/nbs')"
    ]
   },
   {
