Added user-facing testsuite and top-level goals

--- a/nbs/12_learning_pipeline.ipynb
+++ b/nbs/12_learning_pipeline.ipynb
@@ -407,6 +407,7 @@
     "        self.time_chunk_duration_s = time_chunk_duration_s\n",
     "        self.time_chunk_stride_s = time_chunk_stride_s\n",
     "        self.t_coords_per_second = 10 * time_axis_scale\n",
+    "        self.average_wavefront_xy = 0\n",
     "\n",
     "        start_s, end_s = timerange\n",
     "        self.video_chunk_timeranges = np.array(list((start, start+time_chunk_duration_s) for start in\n",
@@ -459,7 +460,7 @@
     "        assert vid_tensor_txy.shape == wavecnn_label.shape\n",
     "        ground_truth = {\n",
     "            \"video_txy\": vid_tensor_txy,\n",
-    "            \"wavefronts_txy\": wavecnn_label,\n",
+    "            \"wavefronts_txy\": wavecnn_label - self.average_wavefront_xy,\n",
     "            \"timerange\": (item_start_s, item_end_s),\n",
     "        }\n",
     "\n",
@@ -501,7 +502,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f42b1b98080>"
+       "<matplotlib.image.AxesImage at 0x7f3d052a8fd0>"
       ]
      },
      "execution_count": null,
@@ -524,6 +525,13 @@
    "source": [
     "plt.imshow(CNND.average_wavefront_xy.T)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -655,9 +663,9 @@
     "model_in, model_gt = CNND[0]\n",
     "for t in range(0,model_gt['wavefronts_txy'].shape[0],5):\n",
     "    fig, axes = plt.subplots(ncols=3, figsize=(22,2))\n",
-    "    axes[0].imshow(model_gt['wavefronts_txy'][t].T - CNND.average_wavefront_xy.T)\n",
+    "    axes[0].imshow(model_gt['wavefronts_txy'][t].T)# - CNND.average_wavefront_xy.T)\n",
     "    axes[1].imshow(model_gt['video_txy'][t].T)\n",
-    "    axes[2].imshow(model_in['coords_txyc'][t,:,:,1].T)"
+    "    axes[2].imshow(model_in['coords_txyc'][t,:,:,1].T) # Display the X coordinates"
    ]
   },
   {
