Simplified wavecnn detector with new dataloaders

--- a/nbs/12_new_learning_pipeline.ipynb
+++ b/nbs/12_new_learning_pipeline.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from surfbreak.pipelines import video_to_waveform_tensor_simple, video_to_trimmed_array_yxt\n",
+    "from surfbreak.pipelines import video_to_waveform_array_txy, video_to_trimmed_array_yxt\n",
     "from surfbreak.graphutils import visualize"
    ]
   },
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "dask_graph = video_to_waveform_tensor_simple(video_filepath, ydim_out=128)\n",
+    "dask_graph = video_to_waveform_array_txy(video_filepath, ydim_out=128)\n",
     "visualize(dask_graph, rankdir='UD')"
    ]
   },
@@ -74,9 +74,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import graphchain\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -128,6 +126,7 @@
     }
    ],
    "source": [
+    "import graphchain\n",
     "import matplotlib.pyplot as plt\n",
     "vid_array = graphchain.get(dask_graph, 'trimmed_video_array')\n",
     "wavefront_array = graphchain.get(dask_graph, 'trimmed_wavefront_array')\n",
