cleanup done, nb tests passing

--- a/nbs/03_perspective_transform.ipynb
+++ b/nbs/03_perspective_transform.ipynb
@@ -175,7 +175,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb7719019e8>"
+       "<matplotlib.image.AxesImage at 0x7ff191cafd30>"
       ]
      },
      "execution_count": null,
@@ -426,7 +426,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb771345128>"
+       "<matplotlib.image.AxesImage at 0x7ff191777b00>"
       ]
      },
      "execution_count": null,
@@ -460,7 +460,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb77032c470>"
+       "<matplotlib.image.AxesImage at 0x7ff190651e48>"
       ]
      },
      "execution_count": null,
@@ -511,7 +511,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb7702987b8>"
+       "<matplotlib.image.AxesImage at 0x7ff1905c7198>"
       ]
      },
      "execution_count": null,
@@ -546,7 +546,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb7702080f0>"
+       "<matplotlib.image.AxesImage at 0x7ff1905a7ac8>"
       ]
      },
      "execution_count": null,
@@ -1052,7 +1052,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# These tensors are 10hz by default (1/6th of the frames from a of 60Hz video)\n",
-    "img_tensor_graph = pipelines.video_to_calibrated_image_tensor('../tmp/shirahama_1590387334_SURF-93cm.ts',\n",
+    "img_tensor_graph = pipelines.video_to_calibrated_array('../tmp/shirahama_1590387334_SURF-93cm.ts',\n",
     "                                                                duration_s=10, start_s=0)\n",
     "graphutils.visualize(img_tensor_graph)"
    ]
